effects plus bounce test

--- a/style.css
+++ b/style.css
@@ -103,6 +103,14 @@ h2 {
 }
 
 
+
+.glow-emoji:hover {
+    text-shadow: 0 5px 10px rgba(121, 26, 172, 0.934);
+    transition: text-shadow 0.4s ease;
+  }
+
+
+
 @media (max-width: 768px) {
     .sidebar {
         position: static;
